aws-vpc-ec2-nginx/ec2.tf


resource "aws_instance" "nginxserver" {
    ami = "ami-04505e74c0741db8d"
    instance_type = "t3.micro"
    subnet_id = aws_subnet.public-subnet.id
    vpc_security_group_ids = [aws_security_group.nginx-sg.id]
    associate_public_ip_address = true

    user_data = <<-EOF
#!/bin/bash
sudo apt update -y
sudo apt install nginx -y
sudo systemctl start nginx
sudo systemctl enable nginx
EOF

    tags = {
        Name = "NginxServer"
    }
}
